--- a/src/html/shared/_footer.html
+++ b/src/html/shared/_footer.html
@@ -1,3 +1,3 @@
-<footer>
+<!-- <footer>
   <a class="link--primary" href="mailto:dinhhaildh9@gmail.com" target="_top">Send Mail</a>
-</footer>
+</footer> -->
